Fix Enumerator::Lazy#take(0)

With some usage of take(0), the first element is taken.

This implementation approach probably is suboptimal, it uses an
intermediate cycle(0) enumerator which does not appear to have this
problem.

Fixes [Bug #18971]